--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,16 @@ a, a:hover, a:focus {
     background: #2a3542;
     overflow-y: scroll;
 }
+/*分页样式*/
+.custom-page{display:inline-block;}
+.custom-page a,.custom-page span,.custom-page .current,.custom-page .prevPage,.custom-page .nextPage{display:inline-block;padding:5px 10px;border:1px solid #ddd;background-color:#fff;font-size:12px;line-height:1.5;text-decoration:none;text-align:center;color:#333;margin-left:4px;}
+.custom-page span{padding-left:0;padding-right:0;background-color:transparent;border-color:transparent;}
+.custom-page a:hover{border-color:#ccc;background-color:#e6e6e6;}
+.custom-page a:active{background-image:none;outline:0;-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);box-shadow:inset 0 3px 5px rgba(0,0,0,.125);}
+.custom-page .prevPage{margin-left:0;}
+.custom-page .current{background-color:#bec3c7;border-color:#bec3c7;color:#fff;cursor:default;}
+.custom-page .disabled{cursor:not-allowed;color:#999;border-color:#ddd;}
+
 
 #sidebar ul li {
     position: relative;
