--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,38 @@ a, a:hover, a:focus {
 /*播放加载*/
 .video-loading { position: absolute;width: 100%;height: 100%;z-index: 101;top: 0;left: 0;background: #000;}
 .video-loading i { font-size: 40px;position: absolute;top: calc(50% - 20px);left: calc(50% - 20px);transform: translate(-50%,-50%);}
+
+/*播放列页面中图片的默认hover，让它直接显示*/
+.no-touch .cs-style-3 figure:hover img,
+.cs-style-3 figure.cs-hover img {
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+}
+.no-touch .cs-style-3 figure figcaption,
+.cs-style-3 figure.cs-hover figcaption {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+    /*-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;*/
+    /*-moz-transition: -moz-transform 0.4s, opacity 0.1s;*/
+    /*transition: transform 0.4s, opacity 0.1s;*/
+}
+.cs-style-3 figcaption {
+    height: 50px;
+}
+.cs-style-3 figcaption a {
+    position: absolute;
+    bottom: 8px;
+    /*right: 20px;*/
+}
+
+
+
+
 #sidebar ul li {
     position: relative;
 }
